--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">商户服务App用户版</string>
     <string name="loading_waiting_text">数据传送中，请稍后&#8230;</string>
+    <!-- 按钮信息 -->
+    <string name="btn_next_step">下一步</string>
+    <string name="btn_confirm">确认</string>
+    <string name="btn_cancle">取消</string>
+    <string name="btn_complete">完成</string>
+    <string name="btn_sign">签名</string>
+    <string name="btn_bind">绑定</string>
+    <string name="btn_register">注册</string>
+    <string name="btn_login">登录</string>
+    <string name="btn_print">打印</string>
 </resources>
