--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">商户服务App用户版</string>
-
+    <!---->
+    <string name="main_title_name">首页</string>
 </resources>
